--- a/templates/pages/artists.html
+++ b/templates/pages/artists.html
@@ -13,4 +13,5 @@
 	</li>
 	{% endfor %}
 </ul>
+<a href="/artists/create"><button class="btn btn-default btn-lg">Post Artist</button></a>
 {% endblock %}
