--- a/templates/pages/venues.html
+++ b/templates/pages/venues.html
@@ -16,4 +16,6 @@
 		{% endfor %}
 	</ul>
 {% endfor %}
+<a href="/venues/create"><button class="btn btn-default btn-lg">Post Venue</button></a>
 {% endblock %}
+
